<resources>
    <string name="app_name">趣儿岛</string>

    <!--按钮-->
    <string name="about">关于</string>
    <string name="close">关闭</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="login">登陆</string>
    <string name="logout">退出</string>
    <string name="settings">配置</string>
    <string name="switchLigin">切换用户</string>
    <string name="me">我</string>
    <string name="username">用户名：</string>
    <string name="password">密     码：</string>
    <string name="click_me_register">没有帐号？点击我注册！</string>

    <string name="error">错误</string>
    <string name="tips">提示</string>
    <string name="warn">警告</string>

    <!--左测菜单-->
    <string name="title_found">发现</string>
    <string name="title_follow">关注</string>
    <string name="title_achieve">成就</string>
    <string name="title_goods">物品</string>
    <string name="title_about">关于</string>

    <!--首页任务菜单-->
    <string name="mission_all">全部任务</string>
    <string name="mission_daily">日常任务</string>
    <string name="mission_guild">公会任务</string>
    <string name="mission_trunk">主线任务</string>
    <string name="mission_branch">支线任务</string>
    <string name="mission_copy">副本任务</string>
    <string name="mssion_publish">发布任务</string>

    <!--关于-->
    <string name="qurdaosite">官网</string>
    <string name="knowmore">了解更多</string>
    <string name="gitapp">Git客户端</string>
    <string name="version">V1.0.0</string>
    <string name="copyright">Copyright © Qurdao All rights reserved.</string>

    <!--消息-->

    <string name="msg_building">建设中...请期待！</string>
    <string name="msg_login_error">密码或用户名错误！</string>
    <string name="msg_username_password_empty">请输入用户名或密码！</string>
    <string name="msg_login_success">登陆成功！</string>
    <string name="msg_login_failure">连接服务器超时！</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">点击</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivityActivity</string>
    <string name="title_activity_building">BuildingActivity</string>
    <string name="title_activity_login">登陆</string>


</resources>
